# scriptchat

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  config.toml.example  pyproject.toml  requirements.txt
examples/: README.md  batch-testing.sc  ci-prompt-testing.sc  code-review.sc  prompt-engineering.sc  quickstart.sc  research-reasoning.sc  run-batch-testing.sh  security-audit.sc  test_search.sc
examples/files/: app.py
examples/files/src/api/: routes.py
examples/files/tests/: test_routes.py
litechat/: __init__.py  __main__.py
litechat/core/: __init__.py  anthropic_client.py  commands.py  config.py  conversations.py  exports.py  ollama_client.py  openai_client.py  provider_dispatcher.py
litechat/ui/: __init__.py  app.py  command_handlers.py
scriptchat/: __init__.py  __main__.py
scriptchat/core/: __init__.py  anthropic_client.py  commands.py  config.py  conversations.py  exports.py  model_defaults.py  model_defaults_extra.py  ollama_client.py  openai_client.py  provider_dispatcher.py  tokenizer.py
scriptchat/ui/: __init__.py  app.py  command_handlers.py  completers.py  events.py  selection_menu.py  test_harness.py
scripts/: update_model_defaults.py
tests/: demo_assertions.txt  test_anthropic_client.py  test_app_helpers.py  test_clear_target.py  test_command_handlers_ui.py  test_commands.py  test_completers.py  test_config_providers.py  test_conversations_io.py  test_exports.py  test_main_batch.py  test_main_batch_commands.py  test_main_entrypoint.py  test_ollama_client.py  test_openai_client_config.py  test_provider_dispatcher.py  test_search_command.py  test_search_ui.py  test_tokenizer.py  test_ui_harness.py  test_ui_headless.py
